--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500;700&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     border: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    list-style: none;
 }
 
 body, html {
@@ -11,20 +14,117 @@ body, html {
     height: 100%;
     background: linear-gradient(135deg, #401F3E 0%, rgba(13, 4, 9, 0.99) 100%);
     color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    gap: 30px;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
-    width: 800px;
+    display: flex;
+    width: 100vw;
     height: 80px;
     align-items: center;
-    justify-content: space-between;
-    display: flex;
+    justify-content: space-around;
 }
 
 header ul {
     width: 300px;
-    background-color: aliceblue;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    list-style: none;
+}
+
+header ul a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+#container {
+    display: flex;
+    max-width: 80vw;
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+    text-align: center;
+    margin: 2rem;
+}
+
+#pass {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 300px;
+}
+.passlist {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 30px;
+    font-size: 36px;
+}
+div#text {
+    font-weight: 200;
+    text-align: justify;
+}
+
+#send {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    width: 500px;
+}
+#send p {
+    width: 80vw;
+    font-size: 24px;
+}
+.color {
+    color: #FF036D;
+}
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin: 1rem;
+}
+input {
+    width: 573px;
+    height: 51px;
+    flex-shrink: 0;
+    font-size: 18px;
+    color: #232323;
+    border-radius: 50px;
+    text-align: center;
+    border: 1px solid #333;
+    background: #FFF;
+}
+
+button {
+    width: 200px;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    border: 1px solid #000;
+    background: linear-gradient(180deg, #401F3E 0%, #FF036D 100%);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
